--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,17 +16,24 @@ jobs:
       - name: Run test
         run: make test
       
-      - name: Login to GCR
+      - name: Docker Hub login
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # - name: Login to GCR
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build&Push
         env:
           APP: "buddybot"
-          REGISTRY: ghcr.io/${{ github.actor }}
+          REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+          # REGISTRY: ghcr.io/${{ github.actor }}
         run: make image push
 
       - name: Clean
